RESOLVED FIXED286807
Fix preferences version format log in NetworkConnectionToWebProcess
https://bugs.webkit.org/show_bug.cgi?id=286807
Summary Fix preferences version format log in NetworkConnectionToWebProcess
Olivier Blin
Reported 2025-01-31 06:52:04 PST
NetworkConnectionToWebProcess build fails on Linux with clang since 288420@main, because %llu is used instead of PRIu64 for m_sharedPreferencesForWebProcess.version: /app/webkit/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:118:84: error: format ‘%llu’ expects argument of type ‘long long unsigned int’, but argument 8 has type ‘uint64_t’ {aka ‘long unsigned int’} [-Werror=format=] 118 | #define CONNECTION_RELEASE_LOG_ERROR(channel, fmt, ...) RELEASE_LOG_ERROR(channel, "%p - [webProcessIdentifier=%" PRIu64 "] NetworkConnectionToWebProcess::" fmt, this, this->webProcessIdentifier().toUInt64(), ##__VA_ARGS__) /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:590:80: note: in definition of macro ‘LOG_ERROR’ 590 | #define LOG_ERROR(...) WTFReportError(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, __VA_ARGS__) /app/webkit/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:118:57: note: in expansion of macro ‘RELEASE_LOG_ERROR’ 118 | #define CONNECTION_RELEASE_LOG_ERROR(channel, fmt, ...) RELEASE_LOG_ERROR(channel, "%p - [webProcessIdentifier=%" PRIu64 "] NetworkConnectionToWebProcess::" fmt, this, this->webProcessIdentifier().toUInt64(), ##__VA_ARGS__) /app/webkit/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:272:13: note: in expansion of macro ‘CONNECTION_RELEASE_LOG_ERROR’ 272 | CONNECTION_RELEASE_LOG_ERROR(IPC, "dispatchMessage: ignoring message '%s' as webSocketEnabled is false (version=%llu)", IPC::description(decoder.messageName()).characters(), m_sharedPreferencesForWebProcess.version);
Attachments
Olivier Blin
Comment 1 2025-01-31 06:58:05 PST
EWS
Comment 2 2025-01-31 09:40:12 PST
Committed 289608@main (bf7f3e205134): <https://commits.webkit.org/289608@main> Reviewed commits have been landed. Closing PR #39817 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-31 09:41:15 PST
Note You need to log in before you can comment on or make changes to this bug.