Fix preferences version format log in NetworkConnectionToWebProcess https://bugs.webkit.org/show_bug.cgi?id=286807

Reviewed by Adrian Perez de Castro and Sihui Liu.

Use PRIu64 instead of %llu for m_sharedPreferencesForWebProcess.version,
to fix Linux clang build after 288420@main.

* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::m_ipcTester):
(WebKit::NetworkConnectionToWebProcess::dispatchMessage):

Canonical link: https://commits.webkit.org/289608@main